--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,28 @@ body {
   padding: 0;
 }
 
+.container {
+  display: grid;
+}
+
+.header {
+  grid-column: span 12;
+}
+
+.aside {
+  grid-column: span 2;
+}
+
+.main {
+  grid-column: span 8;
+}
+
+.footer {
+  grid-column: span 12;
+}
+
+/* Navigation bar */
+
 .nav {
   display: flex;
   position: relative;
@@ -15,9 +37,10 @@ body {
   align-items: center;
   background-color: #333;
   color: white;
+  border-bottom: 1px solid #fff;
 }
 
-.nav-brand{
+.nav-brand {
   font-size: 1.5rem;
   margin: .5rem;
 }
@@ -46,7 +69,7 @@ body {
   padding: 1rem;
 }
 
-.hamburger {
+.nav__hamburger {
   position: absolute;
   top: .75rem;
   right: 1rem;
@@ -57,26 +80,50 @@ body {
   height: 21px;
 }
 
-.hamburger-bar {
+.nav__hamburger-bar {
   height: 3px;
   width: 100%;
   background-color: white;
   border-radius: 10px;
 }
 
+/* Menu */
+
 .menu {
   display: flex;
+  position: relative;
+}
+
+.menu__block {
+  height: 100%;
+}
+
+.menu__list {
+  display: flex;
   flex-direction: column;
-  background-color: teal;
+  margin: 0;
+  padding: 0;
   color: white;
+  background-color: teal;
 }
 
 .menu__item {
   list-style: none;
+  padding: 5px;
+  border-bottom: 1px solid #fff;
+}
+
+.menu__item:hover {
+  background-color: #006666;
 }
 
 .menu__link {
   display: block;
   color: white;
-  padding: 1rem;
+  padding: 12px 16px;
+}
+
+.menu-expand {
+  display: none;
+  position: relative;
 }
