--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .main {
-  grid-column: span 8;
+  grid-column: span 10;
 }
 
 .footer {
@@ -67,6 +67,10 @@ body {
   display: block;
   color: white;
   padding: 1rem;
+}
+
+.nav__link.current {
+  background-color: #555;
 }
 
 .nav__hamburger {
@@ -126,4 +130,67 @@ body {
 .menu-expand {
   display: none;
   position: relative;
+}
+
+/* About page */
+
+.group-name {
+  margin: 5px 5px;
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 50%;
+  padding: 5px 5px;
+}
+
+.card__container {
+  padding: 20px 20px;
+}
+
+.card__img {
+  width: 100%;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 400px;
+}
+
+.card__button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.card__button:hover {
+  background-color: #555;
+}
+
+.map {
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+/* Footer */
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  background-color: #555;
+  color: white;
+  padding: 5px 0;         /* Text center */
+  text-align: center;     /**/
 }
